// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`focus switching > then renders left focus indicator when focused on changes 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Stack (1)[0m                       [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m [38;2;76;62;118ma[39m feat(ide): add split panel preview for file explorer component             [38;2;76;62;118mknoopx[39m[39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m◆ [38;2;250;208;0m[1mfeat(ide): add split panel prev[22m[39m[49m[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;49;120;198m󰜈[39m [38;2;165;255;144msrc/login.tsx[39m                                                                [38;2;165;255;144m󰐕 50[39m [49m[38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m[38;2;49;120;198m󰜈[39m [38;2;250;208;0msrc/App.tsx[39m                                                                   [38;2;250;208;0m󰏫 8[39m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m[38;2;49;120;198m󰜈[39m [38;2;255;98;140msrc/old-page.tsx[39m                                                             [38;2;255;98;140m󰍴 35[39m [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: src/login.tsx (a)[0m                                                            [39m[38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m[0m  diff --git a/src/login.tsx b/src/login.tsx[0m                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m[0m  new file mode 100644[0m                                                              [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m[0m  index 0000000..a3f2c1d[0m                                                            [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m[0m  --- /dev/null[0m                                                                     [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m[0m  +++ b/src/login.tsx[0m                                                               [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m[0m  @@ -0,0 +1,8 @@[0m                                                                   [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m[0m  +import { useState } from 'react';[0m                                                [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m[0m  +[0m                                                                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m[0m  +export function LoginForm() {[0m                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m[0m  +  const [email, setEmail] = useState('');[0m                                        [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m[0m  +  const handleSubmit = (e: React.FormEvent) => {[0m                                 [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m[0m  +    e.preventDefault();[0m                                                          [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m[0m  +  };[0m                                                                             [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m[0m  +  return <form onSubmit={handleSubmit}>Sign in</form>;[0m                           [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`focus switching > then renders right focus indicator when focused on files 1`] = `
"[38;2;76;62;118m╭[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m╮[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m[38;2;250;208;0m Stack (1)[0m                       [39m[39m[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m [38;2;76;62;118ma[39m feat(ide): add split panel preview for file explorer component             [38;2;76;62;118mknoopx[39m[39m[39m[38;2;250;208;0m│[39m
[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m
[38;2;76;62;118m│[39m◆ feat(ide): add split panel prev[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;49;120;198m󰛦[39m [38;2;250;208;0magent/extensions/ide/components/files/files.ts[39m                               [38;2;250;208;0m󰏫 24[39m [49m[38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m
[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: agent/extensions/ide/components/files/files.ts (a)[0m                           [39m[38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m
[38;2;76;62;118m│[39m                                 [38;2;250;208;0m│[39m[0m  diff --git a/agent/extensions/ide/components/files/files.ts b/agent/extensions/id[0m [38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m                                 [38;2;250;208;0m│[39m[0m  index e3b0c44..a1b2c3d 100644[0m                                                     [38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m                                 [38;2;250;208;0m│[39m[0m  --- a/agent/extensions/ide/components/files/files.ts[0m                              [38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m                                 [38;2;250;208;0m│[39m[0m  +++ b/agent/extensions/ide/components/files/files.ts[0m                              [38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m                                 [38;2;250;208;0m│[39m[0m  @@ -1,5 +1,7 @@[0m                                                                   [38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m                                 [38;2;250;208;0m│[39m[0m   import { Component } from '@earendil-works/pi-tui';[0m                              [38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m                                 [38;2;250;208;0m│[39m[0m  +import type { FileInfo } from '../../types';[0m                                     [38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m                                 [38;2;250;208;0m│[39m[0m  +[0m                                                                                 [38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m                                 [38;2;250;208;0m│[39m[0m    export class FilesComponent extends Component {[0m                                 [38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m                                 [38;2;250;208;0m│[39m[0m  -    private items: string[] = [];[0m                                                [38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m                                 [38;2;250;208;0m│[39m[0m  +    private items: FileInfo[] = [];[0m                                              [38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m                                 [38;2;250;208;0m│[39m[0m  +    private selectedPaths: Set<string> = new Set();[0m                              [38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;250;208;0m│[39m
[38;2;76;62;118m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;250;208;0m│[39m
[38;2;76;62;118m├[39m[38;2;76;62;118m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;250;208;0m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;250;208;0m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`loading state > then renders loading indicator 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Stack (0)[0m                       [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Files[0m                                                                              [39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[38;2;76;62;118m Loading...[39m[0m                      [38;2;250;208;0m│[39m[38;2;76;62;118m No files changed[39m[0m                                                                   [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff[0m                                                                               [39m[38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m[38;2;76;62;118m No content[39m[0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;

exports[`move mode > then renders move indicator on cursor change 1`] = `
"[38;2;250;208;0m╭[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m
[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Stack (2)[0m                       [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m [38;2;76;62;118ma[39m feat(ide): add split panel preview for file explorer                       [38;2;76;62;118mknoopx[39m[39m[39m[38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[48;2;50;36;93m◆ [38;2;250;208;0m↕ [39m[38;2;250;208;0m[1mfeat(ide): add split panel pr[22m[39m[49m[38;2;250;208;0m│[39m[38;2;76;62;118m No files changed[39m[0m                                                                   [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m◆ fix(tui): resolve race conditio[38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m│[39m[38;2;250;208;0m Diff: all (a)[0m                                                                      [39m[38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m[0m                                 [38;2;250;208;0m├[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m[38;2;76;62;118m No content[39m[0m                                                                         [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m│[39m                                 [38;2;250;208;0m│[39m                                                                                    [38;2;76;62;118m│[39m
[38;2;250;208;0m├[39m[38;2;250;208;0m─────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m
[38;2;76;62;118m│[39m[38;2;76;62;118m [0m                                                                                                                     [39m[38;2;76;62;118m│[39m
[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m"
`;
